# UAV_Security_Tool

./: .gitignore  README.md  hackUAV.bash  install_tools.sh  pyproject.toml
.agent/rules/: venv-path.md
data/ephemeris/: brdc3370.25n
src/: main.py
src/gui/: __init__.py  constants.py  main_test.py  main_window.py  styles.py
src/gui/configs/: standard_v1.0.json  standard_v1.1.json
src/gui/core/: __init__.py  config_manager.py  project_manager.py
src/gui/dialogs/: __init__.py  migration_dialog.py  qr_dialog.py  version_dialog.py
src/gui/infrastructure/: __init__.py  photo_server.py
src/gui/pages/: __init__.py  gallery.py  overview.py  project_form.py  quick_selector.py  single_target.py  test_page.py
src/gui/test_tools/: base.py  command.py  factory.py  nmap.py
src/gui/views/: new_project.ui
src/gui/views/controllers/: main_controller.py  new_project_ctrl.py  project_form_ctrl.py
src/gui/widgets/: aspect_label.py  attachment.py
src/gui/windows/: __init__.py  bordered_window.py  main_app.py  title_bar.py
src/gui_for_test/: main_test.py  standard_config.json  tt.py
src/gui_for_test/configs/: standard_v1 copy 2.json  standard_v1 copy.json  standard_v1.0.json  standard_v1.1.json  standard_v1.json
src/gui_old/: app.py
src/gui_old/core/: utils.py
src/gui_old/views/: mainGUI.ui  project_form.ui  widget_621.ui
src/hackrf/: fake_gps.py  pyhackrf.py
src/mavlink_sniffer/: fast_replay.py  main.py  mavlink_receiver.py
src/tools/: fetch_brdc.py
src/utils/: mutate_file.py  tool.py
test/project-1/project-1/: project_settings.json
(+1 files in other folders)
