[build-system]
# 定義建置系統所需的工具
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackrf-tools"  # 專案名稱 (只能用英文、數字、連字號)
version = "0.1.0"
description = "無人機資安檢測工具"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Yuan"},
]

# 自動安裝這些依賴 (這樣別人 clone 下來只要裝這個專案，套件就會自動裝好)
dependencies = [
    "requests",
    "python-dotenv",
    "numpy",
    "PySide6",
    "cve-bin-tool",
]

[tool.setuptools.packages.find]
# 告訴 setuptools 原始碼在哪裡
where = ["src", "src/gui"]

# 用 pip
# python -m pip install -e .
# 若用 uv
# uv pip install -e .

# python -m src.gui.app
# 或
# uv run python -m src.gui.app

[tool.pyright]
extraPaths = ["src/gui"]

[tool.pylance]
extraPaths = ["src/gui"]

